made the app Java 8 compatible. closes #20