@@ -3,7 +3,8 @@ package image.processing.engine.controllers;
 import java.io.*;
 import java.net.*;
 import javafx.fxml.*;
-import java.nio.file.Path;
+import java.nio.file.Paths;
+
 import javafx.scene.control.*;
 import javafx.scene.image.*;
 import javafx.scene.input.MouseEvent;
@@ -29,7 +30,7 @@ public class GalleryController implements Initializable {
         this.logger.info("Initializing the GalleryController.class");
         try {
             URI uri = getClass().getClassLoader().getResource("images").toURI();
-            this.imageDirectory = Path.of(uri).toFile();
+            this.imageDirectory = new File(Paths.get(uri).toString());
             this.images = imageDirectory.listFiles(file -> file.isFile());
 
             for (File image : images) {
